--- a/css/styles.css
+++ b/css/styles.css
@@ -1,149 +1,186 @@
 body {
   text-align: center;
   font-family: courier;
-  background-image:url("../assets/image.jpeg");
+  background-image: url("../assets/image.jpeg");
   background-repeat: no-repeat;
   background-size: 100%;
 }
 
 * {
-        font-family: Arial, "Free Sans";
-    }
-    #container {
-        color: #fff;
-  background:#000;
-    }
-    #container #question {
-        display: block;
-        padding: 20px;
-        font-weight: bold;
-        letter-spacing: -3px;
-        margin-bottom: 20px;
-        padding: 10px;
-        font-size: 40px;
-    }
-    #container div {
-        font-weight: bold;
-        letter-spacing: -3px;
-        background: #0099cc;
-        margin-bottom: 15px;
-        padding: 10px;
-        font-size: 34px;
-        color: #ffffff;
-        border-left: 20px solid #333;
-        width: 400px;
-        -webkit-border-radius: 0.5em;
-        -moz-border-radius: 0 0.5em 0.5em 0;
-        border-radius: 0 1.5em 1.5em 0;
-    }
-    #container div a {
-        border-radius: 0.3em;
-        text-decoration: none;
-        color: #0099cc;
-        padding: 5px 15px;
-        background: #333;
-        margin: 0 20px;
-    }
-    #container div a:hover {
-        color: #fff;
-    }
-    body {
-        margin: 0;
-        padding: 0;
-    }
+  font-family: Arial, "Free Sans";
+}
+
+#container {
+  color: #fff;
+  background: #000;
+}
+
+#container #question {
+  display: block;
+  padding: 20px;
+  font-weight: bold;
+  letter-spacing: -3px;
+  margin-bottom: 20px;
+  padding: 10px;
+  font-size: 40px;
+}
+
+#container div {
+  font-weight: bold;
+  letter-spacing: -3px;
+  background: #0099cc;
+  margin-bottom: 15px;
+  padding: 10px;
+  font-size: 34px;
+  color: #ffffff;
+  border-left: 20px solid #333;
+  width: 400px;
+  -webkit-border-radius: 0.5em;
+  -moz-border-radius: 0 0.5em 0.5em 0;
+  border-radius: 0 1.5em 1.5em 0;
+}
+
+#container div a {
+  border-radius: 0.3em;
+  text-decoration: none;
+  color: #0099cc;
+  padding: 5px 15px;
+  background: #333;
+  margin: 0 20px;
+}
+
+#container div a:hover {
+  color: #fff;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
 
 h1 {
-    	font-family: helvetica;
-    	font-weight: normal;
-    	text-align: center;
-    	color: #c0c0c0;
-    	padding-top: 50px;
-    	padding-bottom: 10px;
-    	width: 375px;
-    	margin: 0 auto;
-    	border-bottom: 3px solid #f3f3f3;
-    }
+  font-family: helvetica;
+  font-weight: normal;
+  text-align: center;
+  color: #c0c0c0;
+  padding-top: 50px;
+  padding-bottom: 10px;
+  width: 375px;
+  margin: 0 auto;
+  border-bottom: 3px solid #f3f3f3;
+}
 
-    .containers {
-    	width: 520px;
-    	margin: 20px auto;
-    }
+.containers {
+  width: 520px;
+  margin: 20px auto;
+}
 
-    .menu_btn {
-    	font-family: helvetica;
-    	width: 125px;
-    	float: left;
-    	margin-left: 5px;
-    	&:first-child .dd_btn {
-    		background: #f1c40f;
-    		&:active {
-    			background: #f39c12;
-    		}
-    	}
-    	&:nth-child(2) .dd_btn {
-    		background: #2ecc71;
-    		&:active {
-    			background: #27ae60;
-    		}
-    	}
-    	&:nth-child(3) .dd_btn {
-    		background: #3498db;
-    		&:active {
-    			background: #2980b9;
-    		}
-    	}
-    	&:nth-child(4) .dd_btn {
-    		background: #e74c3c;
-    		&:active {
-    			background: #c0392b;
-    		}
-    	}
-    	.dd_btn {
-    		height: 50px;
-    		width: 125px;
-    		color: #fff;
-    		font-size: 18px;
-    		border: 0px;
-    		z-index: 3;
-    		float: left;
-    		cursor: pointer;
-      	background-color:#E19E19;
-    		&:active {
-      		background-color:#946810;
-    		}
-    		&:focus {
-    			outline: none;
-    		}
-    	}
-    	.dd {
-    		position: absolute;
-    		width: 255px;
-    		margin-top: 55px;
-    		background: white;
-    		text-align: center;
-    		a {
-    			width: 100%;
-    			display: block;
-    			height: 100%;
-    			padding: 15px 0 15px 0;
-    			text-decoration: none;
-    			color: #666;
-    			background: #f9f9f9;
-    			&:hover {
-    				background: #ecf0f1;
-    			}
-    			&:active {
-    				background-color: #bdc3c7;
-    				color: #fff;
-    			}
-    		}
-    	}
+.menu_btn {
+  font-family: helvetica;
+  width: 125px;
+  float: left;
+  margin-left: 5px;
+  &:first-child .dd_btn {
+    background: #f1c40f;
+    &:active {
+      background: #f39c12;
     }
+  }
+  &:nth-child(2) .dd_btn {
+    background: #2ecc71;
+    &:active {
+      background: #27ae60;
+    }
+  }
+  &:nth-child(3) .dd_btn {
+    background: #3498db;
+    &:active {
+      background: #2980b9;
+    }
+  }
+  &:nth-child(4) .dd_btn {
+    background: #e74c3c;
+    &:active {
+      background: #c0392b;
+    }
+  }
+  .dd_btn {
+    height: 50px;
+    width: 125px;
+    color: #fff;
+    font-size: 18px;
+    border: 0px;
+    z-index: 3;
+    float: left;
+    cursor: pointer;
+    background-color: #E19E19;
+    &:active {
+      background-color: #946810;
+    }
+    &:focus {
+      outline: none;
+    }
+  }
+  .dd {
+    position: absolute;
+    width: 255px;
+    margin-top: 55px;
+    background: white;
+    text-align: center;
+    a {
+      width: 100%;
+      display: block;
+      height: 100%;
+      padding: 15px 0 15px 0;
+      text-decoration: none;
+      color: #666;
+      background: #f9f9f9;
+      &:hover {
+        background: #ecf0f1;
+      }
+      &:active {
+        background-color: #bdc3c7;
+        color: #fff;
+      }
+    }
+  }
+}
 
-.cal{ display:inline-block; background:#ffe; color:#555; font-size:6px; text-align:center; transform:scale(1); transition:all 0.2s linear;}
-.cal:hover{ transform:scale(2.5);transition:all 0.4s linear;}
-.cal caption{ background:#d44; color:#eee; font-size:15px;}
-.cal th{ color:#aaa;line-height:200%;}
-.cal th:first-child{ color:#f00;}
-.cal th:last-child{ color:#04d;}
-.cal td{ padding:0 2px; line-height:100%;}
+.cal {
+  display: inline-block;
+  background: #ffe;
+  color: #555;
+  font-size: 6px;
+  text-align: center;
+  transform: scale(1);
+  transition: all 0.2s linear;
+}
+
+.cal:hover {
+  transform: scale(2.5);
+  transition: all 0.4s linear;
+}
+
+.cal caption {
+  background: #d44;
+  color: #eee;
+  font-size: 15px;
+}
+
+.cal th {
+  color: #aaa;
+  line-height: 200%;
+}
+
+.cal th:first-child {
+  color: #f00;
+}
+
+.cal th:last-child {
+  color: #04d;
+}
+
+.cal td {
+  padding: 0 2px;
+  line-height: 100%;
+}
